# ml_stankin_proj

./: .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt  service.py
backend/: dockerfile  pyproject.toml  service.py
backend/data_prep/: doc_to_scenes.py  docx_to_text.py
backend/ml/: age_inference.py  config.py  lexicons.py  train.py  weak_labeling.py
data_prep/: build_age_dataset.py  pdf_to_scenes.py
frontend/: dockerfile  message(10).txt  nginx.conf  package-lock.json  package.json
frontend/src/: App.js
ml/: age_model.py  model.py  phrases_config.py  train_age.py
